--- a/task.html
+++ b/task.html
@@ -4,20 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-    body{
-        text-align: center;
-    }
-    </style>
 </head>
 <body>
-    <h3>Prime or not</h3>
-    <input type="text" placeholder="enter the number to check" onclick="prime()">
-    <div><br>
-    <input type="button" value="Check">
-    </div>
-    <script src="task1.js">
-
-    </script>
+    <script src="task10.js"></script>
 </body>
 </html>
